# templ-heroicons-generator

./: .gitignore  LICENCE  README.md  config.compiled.templ-heroicons-generator.yaml  generate_heroicons.py  pyproject.toml  requirements.txt
templ_heroicons_generator/: __init__.py  __main__.py  cli.py  main.py
templ_heroicons_generator/core/: config.py  downloader.py  icons.py  scanner.py  templ_builder.py  utils.py
